Improvements after first review

--- a/index.html
+++ b/index.html
@@ -10,248 +10,243 @@
 <body class="page">
 <header class="header">
     <div class="logo logo_place-header"></div>
-    <div class="header__title">Learning how to learn</div>
+    <h1 class="header__title">Learning how to learn</h1> <!-- + -->
     <div class="header__subtitle">
         The most effective, cutting-edge learning techniques that you can apply to your daily life.
-        <a href="#">Learn more &rarr;</a>
+        <a class="header__link" href="#">Learn more &rarr;</a>
     </div>
-    <div class="header__link"></div>
     <div class="header__main-illustration"></div>
     <div class="header__square-pic"></div>
 </header>
 <main class="content">
     <section class="description">
         <div class="two-columns">
-            <div class="two-columns__brief">The main problem with education</div>
+            <h2 class="two-columns__brief">The main problem with education</h2>
             <div class="two-columns__main-text">
-                <!-- could be changed to p -->
-                <div class="two-columns__paragraph">
+                <p class="two-columns__paragraph">
                     Whether it's at school or university, the one thing no one ever teaches you is how to teach
                     yourself. All you actually do is memorize information in order to regurgitate when you take
                     the test. You get drilled on how to solve specific exercises so that while you know exactly
                     what you need to do when exam time comes around, do you truly understand the subject
                     material? All you've really learned is how to pass that one test. Once that test is over,
                     the information in your head has outlived its usefulness.
-                </div>
-                <div class="two-columns__paragraph">
+                </p>
+                <p class="two-columns__paragraph">
                     <span class="two-columns__span-accent">Conclusion:</span>
                     Knowing how to study is absolutely essential, but for some reason, this point is too often
                     overlooked. So, what can we do to remedy this?
-                </div>
-                <div class="two-columns__paragraph">
+                </p>
+                <p class="two-columns__paragraph">
                     There are certain techniques and exercises that can be applied to the learning process to
                     help make it more efficient and engaging. This is exactly what we do at Practicum.
-                </div>
+                </p>
             </div>
         </div>
     </section>
 
     <section class="digits">
-        <h1 class="section-title">
+        <h2 class="section-title">
             Facts and figures
-        </h1>
-        <h2 class="section-subtitle">
-            On learning and the brain
         </h2>
-        <div class="table">
-            <div class="table__cell">
-                <div class="table__heading">
+        <p class="section-subtitle">
+            On learning and the brain
+        </p>
+        <ul class="table">
+            <li class="table__cell">
+                <p class="table__heading">
                     86 billion
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     The number of neurons in the human brain
-                </div>
-            </div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__cell">
+                <p class="table__heading">
                     2.1 billion
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     The number of adults with low reading proficiency
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     World Bank, 2017
-                </div>
-            </div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__cell">
+                <p class="table__heading">
                     1,000 terabytes
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     Human information storage capacity
-                </div>
-            </div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__cell">
+                <p class="table__heading">
                     500 trillion
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     The number of nerve synapses responsible for learning in an adult human
-                </div>
-            </div>
-            <div class="table__linebreak"></div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__linebreak"></li>
+            <li class="table__cell">
+                <p class="table__heading">
                     420 million
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     The number of adults under 25 with insufficient education for finding employment
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     World Bank, 2017
-                </div>
-            </div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__cell">
+                <p class="table__heading">
                     17 - 20 years old
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     Peak learning age
-                </div>
-            </div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__cell">
+                <p class="table__heading">
                     1885
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     Development of the forgetting curve
-                </div>
-            </div>
-            <div class="table__cell">
-                <div class="table__heading">
+                </p>
+            </li>
+            <li class="table__cell">
+                <p class="table__heading">
                     1897
-                </div>
-                <div class="table__text">
+                </p>
+                <p class="table__text">
                     Publication of Ivan Pavlov's research on classical conditioning
-                </div>
-            </div>
-        </div>
-
+                </p>
+            </li>
+        </ul>
     </section>
 
-    <section class="feinman">
-        <h1 class="feinman__title">The Feynman Technique</h1>
-        <h2 class="feinman__subtitle">Learn without forgetting.</h2>
-        <!-- <div class="feinman__link"> -->
-        <a class="feinman__link" href="#">More &rarr;</a>
-        <!-- </div>-->
+    <section class="feynman">
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <p class="feynman__subtitle">Learn without forgetting.</p>
+        <a class="feynman__link" href="#">More &rarr;</a>
     </section>
 
     <section class="kaufman">
-        <h1 class="section-title section-title_theme-dark">Ten principles of rapid skill acquisition</h1>
-        <h2 class="section-subtitle section-subtitle_theme-dark"> by Josh Kaufman</h2>
-        <div class="table table_theme-dark">
-            <div class="table__cell table__cell_theme-dark">
+        <h2 class="section-title section-title_theme-dark">Ten principles of rapid skill acquisition</h2>
+        <p class="section-subtitle section-subtitle_theme-dark"> by Josh Kaufman</p>
+        <ol class="table table_theme-dark">
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     1
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Choose a lovable project.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     2
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Focus your energy on one skill at a time.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     3
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Define your target performance level.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     4
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Deconstruct the skill into sub-skills.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     5
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Obtain critical tools.
                 </div>
-            </div>
+            </li>
             <div class="table__linebreak"></div>
-            <div class="table__cell table__cell_theme-dark">
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     6
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Eliminate barriers to practice.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     7
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Make dedicated time for practice.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     8
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Create fast feedback loops.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     9
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Practice by the clock in short bursts.
                 </div>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
                 <div class="table__heading table__heading_theme-dark">
                     10
                 </div>
                 <div class="table__text table__text_theme-dark">
                     Emphasize quantity and speed.
                 </div>
-            </div>
-        </div>
-        <div class="kaufman__triangle">
-
-        </div>
+            </li>
+        </ol>
+        <div class="kaufman__triangle"></div>
     </section>
 </main>
 <footer class="footer">
     <div class="footer__columns">
         <div class="footer__column footer__column_content-copyright">
             <div class="logo logo_place-footer"></div>
-            <div class="footer__author">&copy; 2019. Holger Kraus</div>
+            <p class="footer__author">&copy; 2019. Holger Kraus</p>
         </div>
         <div class="footer__column footer__column_content-info">
-            <div class="footer__column-heading">About Practicum by Yandex</div>
-            <div class="footer__column-links">
-                <a class="footer__column-link" href="#">Home page</a>
-                <a class="footer__column-link" href="#">Concept</a>
-                <a class="footer__column-link" href="#">Mentors</a>
-            </div>
+            <h2 class="footer__column-heading">About Practicum by Yandex</h2>
+            <ul class="footer__column-links">
+                <li><a class="footer__column-link" href="#">Home page</a></li>
+                <li><a class="footer__column-link" href="#">Concept</a><li>
+                <li><a class="footer__column-link" href="#">Mentors</a><li>
+            </ul>
         </div>
         <div class="footer__column footer__column_content-social">
-            <div class="footer__column-heading">Social media</div>
-            <div class="footer__social-icons">
-                <a class="footer__social-link" href="https://www.facebook.com/ya.practicum/">
-                    <img class="footer__social-icon" src="./images/facebook_white.svg"> Facebook </a>
-            </div>
-            <div class="footer__social-icons">
-                <a class="footer__social-link" href="https://www.instagram.com/yndx.practicum/">
-                    <img class="footer__social-icon" src="./images/instagram_white.svg"> Instagram </a>
-            </div>
+            <h2 class="footer__column-heading">Social media</h2>
+            <ul class="footer__social-icons">
+                <li>
+                    <a class="footer__social-link" href="https://www.facebook.com/ya.practicum/">
+                    <img class="footer__social-icon" alt="Facebook logo" src="./images/facebook_white.svg"> Facebook </a>
+                </li>
+                <li>
+                    <a class="footer__social-link" href="https://www.instagram.com/yndx.practicum/">
+                    <img class="footer__social-icon" alt="Instagram logo" src="./images/instagram_white.svg"> Instagram </a>
+                </li>
+            </ul>
         </div>
     </div>
 </footer>
