Introduced BEM file structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning how to learn</title>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="vendor/normalize.css">
+    <link rel="stylesheet" href="pages/index.css">
 </head>
 <body class="page">
 <header class="header">
-    <div class="logo logo_place-header"></div>
+    <div class="logo logo_place_header"></div>
     <h1 class="header__title">Learning how to learn</h1> <!-- + -->
     <div class="header__subtitle">
         The most effective, cutting-edge learning techniques that you can apply to your daily life.
@@ -132,86 +132,86 @@
     </section>
 
     <section class="kaufman">
-        <h2 class="section-title section-title_theme-dark">Ten principles of rapid skill acquisition</h2>
+        <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
         <p class="section-subtitle section-subtitle_theme-dark"> by Josh Kaufman</p>
-        <ol class="table table_theme-dark">
+        <ol class="table table_theme_dark">
             <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+                <div class="table__heading table__heading_theme_dark">
                     1
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Choose a lovable project.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     2
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Focus your energy on one skill at a time.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     3
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Define your target performance level.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     4
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Deconstruct the skill into sub-skills.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     5
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Obtain critical tools.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     6
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Eliminate barriers to practice.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     7
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Make dedicated time for practice.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     8
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Create fast feedback loops.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     9
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Practice by the clock in short bursts.
                 </div>
             </li>
-            <li class="table__cell table__cell_theme-dark">
-                <div class="table__heading table__heading_theme-dark">
+            <li class="table__cell table__cell_theme_dark">
+                <div class="table__heading table__heading_theme_dark">
                     10
                 </div>
-                <div class="table__text table__text_theme-dark">
+                <div class="table__text table__text_theme_dark">
                     Emphasize quantity and speed.
                 </div>
             </li>
@@ -221,11 +221,11 @@
 </main>
 <footer class="footer">
     <div class="footer__columns">
-        <div class="footer__column footer__column_content-copyright">
-            <div class="logo logo_place-footer"></div>
+        <div class="footer__column footer__column_content_copyright">
+            <div class="logo logo_place_footer"></div>
             <p class="footer__author">&copy; 2019. Holger Kraus</p>
         </div>
-        <div class="footer__column footer__column_content-info">
+        <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">About Practicum by Yandex</h2>
             <ul class="footer__column-links">
                 <li><a class="footer__column-link" href="#">Home page</a></li>
@@ -233,7 +233,7 @@
                 <li><a class="footer__column-link" href="#">Mentors</a><li>
             </ul>
         </div>
-        <div class="footer__column footer__column_content-social">
+        <div class="footer__column footer__column_content_social">
             <h2 class="footer__column-heading">Social media</h2>
             <ul class="footer__social-icons">
                 <li>
