--- a/index.html
+++ b/index.html
@@ -100,6 +100,43 @@
     </ul>
   </section>
 
+  <section class="video">
+    <h2 class="section-title">
+      TED talks
+    </h2>
+    <p class="section-subtitle">
+      For lovers of procrastination
+    </p>
+    <ul class="video__iframes">
+      <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+      <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+    </ul>
+  </section>
+
+  <section class="oakley">
+    <div class="two-columns">
+      <h2 class="two-columns__brief">Barbara Oakley’s story.</h2>
+      <div class="two-columns__main-text">
+        <p class="two-columns__paragraph">
+          Math didn't come naturally to Barbara in childhood. She thought of herself as more of a
+          humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after
+          school she enlisted in the army, who sent her to learn Russian. After several years of service,
+          during which she rose to the rank of Captain, Barbara left the army and decided to study
+          engineering. In was during this time that she developed her learning methodology as she was
+          forced to reprogram her brain for a different kind of learning. It turns out that when something
+          doesn't come naturally to you, having to work hard to gain the knowledge that other people
+          may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="feynman">
+    <h2 class="feynman__title">The Feynman Technique</h2>
+    <p class="feynman__subtitle">Learn without forgetting.</p>
+    <a class="feynman__link" href="#">More &rarr;</a>
+  </section>
+
   <section class="digits">
     <h2 class="section-title">
       Facts and figures
@@ -181,10 +218,21 @@
     </ul>
   </section>
 
-  <section class="feynman">
-    <h2 class="feynman__title">The Feynman Technique</h2>
-    <p class="feynman__subtitle">Learn without forgetting.</p>
-    <a class="feynman__link" href="#">More &rarr;</a>
+  <section class="khan">
+    <div class="khan__container">
+      <p class="khan__author">Salman Khan</p>
+      <h2 class="khan__title">The One World Schoolhouse</h2>
+      <blockquote class="khan__quote">Sal Khan's passion and innovation is transforming learning for millions of
+        students worldwide. The One World Schoolhouse is a must-read for all
+        who are committed to improving education so students everywhere can
+        gain the skills and knowledge to be successful in school, careers and life.</blockquote>
+      <p class="khan__quote-author">George Lucas</p>
+      <p class="khan__quote-author-subline">Filmmaker</p>
+      <diV class="khan__book-container">
+        <div class="khan__book-pic"></div>
+        <a class="khan__buy-link" href="#">Buy book &rarr;</a>
+      </diV>
+    </div>
   </section>
 
   <section class="kaufman">
@@ -272,7 +320,7 @@
         </div>
       </li>
     </ol>
-    <div class="kaufman__triangle"></div>
+    <div class="kaufman__triangle rotation"></div>
   </section>
 </main>
 <footer class="footer">
