add resources block

--- a/index.html
+++ b/index.html
@@ -322,6 +322,20 @@
     </ol>
     <div class="kaufman__triangle rotation"></div>
   </section>
+  <section class="resources">
+    <h2 class="section-title">
+      Useful resources
+    </h2>
+    <p class="section-subtitle">
+      Further materials on learning techniques and hacks.
+    </p>
+    <ul class="rescources__logo-zone">
+      <li><img class="resources__logo" src="images/logo/tedED.png" alt="TEDEd logo"></li>
+      <li><img class="resources__logo" src="images/logo/Medium.png" alt="Medium logo"></li>
+      <li><img class="resources__logo" src="images/logo/dezeen.png" alt="dezeen logo"></li>
+      <li><img class="resources__logo" src="images/logo/goodreads.png" alt="goodreads logo"></li>
+    </ul>
+  </section>
 </main>
 <footer class="footer">
   <div class="footer__columns">
