added some links, assured that themes are imported in the right order, added a Readme

--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
       Further materials on learning techniques and hacks.
     </p>
     <ul class="rescources__logo-zone">
-      <li><img class="resources__logo" src="images/logo/tedED.png" alt="TEDEd logo"></li>
-      <li><img class="resources__logo" src="images/logo/Medium.png" alt="Medium logo"></li>
-      <li><img class="resources__logo" src="images/logo/dezeen.png" alt="dezeen logo"></li>
-      <li><img class="resources__logo" src="images/logo/goodreads.png" alt="goodreads logo"></li>
+      <li><a href="https://ed.ted.com/"><img class="resources__logo" src="images/logo/tedED.png" alt="TEDEd logo"></a></li>
+      <li><a href="https://medium.com/"><img class="resources__logo" src="images/logo/Medium.png" alt="Medium logo"></a></li>
+      <li><a href="https://www.dezeen.com/"><img class="resources__logo" src="images/logo/dezeen.png" alt="dezeen logo"></a></li>
+      <li><a href="https://www.goodreads.com/"><img class="resources__logo" src="images/logo/goodreads.png" alt="goodreads logo"></a></li>
     </ul>
   </section>
 </main>
