added smooth transitions for hovering over links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning how to learn</title>
-  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 <body class="page">
@@ -108,8 +107,8 @@
       For lovers of procrastination
     </p>
     <ul class="video__iframes">
-      <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-      <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+      <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+      <li class="video__iframe"><iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
     </ul>
   </section>
 
@@ -330,10 +329,10 @@
       Further materials on learning techniques and hacks.
     </p>
     <ul class="rescources__logo-zone">
-      <li><a href="https://ed.ted.com/"><img class="resources__logo" src="images/logo/tedED.png" alt="TEDEd logo"></a></li>
-      <li><a href="https://medium.com/"><img class="resources__logo" src="images/logo/Medium.png" alt="Medium logo"></a></li>
-      <li><a href="https://www.dezeen.com/"><img class="resources__logo" src="images/logo/dezeen.png" alt="dezeen logo"></a></li>
-      <li><a href="https://www.goodreads.com/"><img class="resources__logo" src="images/logo/goodreads.png" alt="goodreads logo"></a></li>
+      <li><a class="resources__logo-link" href="https://ed.ted.com/"><img class="resources__logo" src="images/logo/tedED.png" alt="TEDEd logo"></a></li>
+      <li><a class="resources__logo-link" href="https://medium.com/"><img class="resources__logo" src="images/logo/Medium.png" alt="Medium logo"></a></li>
+      <li><a class="resources__logo-link" href="https://www.dezeen.com/"><img class="resources__logo" src="images/logo/dezeen.png" alt="dezeen logo"></a></li>
+      <li><a class="resources__logo-link" href="https://www.goodreads.com/"><img class="resources__logo" src="images/logo/goodreads.png" alt="goodreads logo"></a></li>
     </ul>
   </section>
 </main>
