--- a/index.html
+++ b/index.html
@@ -52,45 +52,45 @@
     <ul class="cards">
       <li class="cards__item">
         <img class="cards__image" src="images/attention.png" alt="hands with a book">
-        <p class="cards__title">
+        <h3 class="cards__title"> <!-- I preferred h3 here, because it is actually a sub section of Learning Techniques that is already h2 -->
           Two Ways of Thinking
-        </p>
+        </h3>
         <p class="cards__description">
           Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.
         </p>
       </li>
       <li class="cards__item">
         <img class="cards__image" src="images/recall.png" alt="ancient statue">
-        <p class="cards__title">
+        <h3 class="cards__title">
           Recall
-        </p>
+        </h3>
         <p class="cards__description">
           Improving your ability to remember key bits of information help to connect different part of the brain.
         </p>
       </li>
       <li class="cards__item">
         <img class="cards__image" src="images/interliving.png" alt="exhibition hall">
-        <p class="cards__title">
+        <h3 class="cards__title">
           Interleaving
-        </p>
+        </h3>
         <p class="cards__description">
           When you learn multiple skills at the same time, they reinforce each other.
         </p>
       </li>
       <li class="cards__item">
         <img class="cards__image" src="images/question.png" alt="man in an empty room">
-        <p class="cards__title">
+        <h3 class="cards__title">
           Questions
-        </p>
+        </h3>
         <p class="cards__description">
           When listening to your teacher, think up a good question, something that you're really itching to know.
         </p>
       </li>
       <li class="cards__item">
         <img class="cards__image" src="images/competence.png" alt="hand with a stack of books">
-        <p class="cards__title">
+        <h3 class="cards__title">
           Illusion of Competence
-        </p>
+        </h3>
         <p class="cards__description">
           Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can
           you be truly certain you've understood something.
@@ -131,7 +131,7 @@
   </section>
 
   <section class="feynman">
-    <h2 class="feynman__title">The Feynman Technique</h2>
+    <h2 class="feynman__title">The&nbsp;Feynman Technique</h2> <!-- I introduced the &nbsp;, but from my point of view it is not necessary, I always just see two lines -->
     <p class="feynman__subtitle">Learn without forgetting.</p>
     <a class="feynman__link" href="#">More &rarr;</a>
   </section>
@@ -227,10 +227,10 @@
         gain the skills and knowledge to be successful in school, careers and life.</blockquote>
       <p class="khan__quote-author">George Lucas</p>
       <p class="khan__quote-author-subline">Filmmaker</p>
-      <diV class="khan__book-container">
+      <div class="khan__book-container">
         <div class="khan__book-pic"></div>
         <a class="khan__buy-link" href="#">Buy book &rarr;</a>
-      </diV>
+      </div>
     </div>
   </section>
 
@@ -238,7 +238,7 @@
     <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
     <p class="section-subtitle section-subtitle_theme-dark"> by Josh Kaufman</p>
     <ol class="table table_theme_dark">
-      <li class="table__cell table__cell_theme-dark">
+      <li class="table__cell table__cell_theme_dark">
         <div class="table__heading table__heading_theme_dark">
           1
         </div>
@@ -328,7 +328,7 @@
     <p class="section-subtitle">
       Further materials on learning techniques and hacks.
     </p>
-    <ul class="rescources__logo-zone">
+    <ul class="resources__logo-zone">
       <li><a class="resources__logo-link" href="https://ed.ted.com/"><img class="resources__logo" src="images/logo/tedED.png" alt="TEDEd logo"></a></li>
       <li><a class="resources__logo-link" href="https://medium.com/"><img class="resources__logo" src="images/logo/Medium.png" alt="Medium logo"></a></li>
       <li><a class="resources__logo-link" href="https://www.dezeen.com/"><img class="resources__logo" src="images/logo/dezeen.png" alt="dezeen logo"></a></li>
