replaced background images by img tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     The most effective, cutting-edge learning techniques that you can apply to your daily life.
     <a class="header__link" href="#">Learn more &rarr;</a>
   </div>
-  <div class="header__main-illustration"></div>
+  <img class="header__main-illustration" alt="woman standing on the edge" src="images/on_the_edge.png">
   <div class="header__square-pic rotation"></div>
 </header>
 <main class="content">
@@ -228,7 +228,7 @@
       <p class="khan__quote-author">George Lucas</p>
       <p class="khan__quote-author-subline">Filmmaker</p>
       <div class="khan__book-container">
-        <div class="khan__book-pic"></div>
+        <img class="khan__book-pic" src="images/book.png" alt="khan book cover">
         <a class="khan__buy-link" href="#">Buy book &rarr;</a>
       </div>
     </div>
